# projekt

./: CMakeLists.txt  funkcjonalnosc.c  funkcjonalnosc.h  main.c  readme.txt  status_gry.h  tworzenie_gry.c  tworzenie_gry.h
